--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "run": "node src/index.js"
+    "test": "node src/index.js"
   },
   "author": "",
   "license": "ISC"
