--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "node src/index.js"
   },
   "author": "",
-  "license": "ISC"
-
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
